--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -185,7 +185,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=ArkoEvent
-main.class=view.CreateEvent
+main.class=arkoevent_group6_37b.ArkoEvent_Group6_37B
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
