--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,11 +33,13 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ArkoEvent_Group6_37B
 excludes=
+file.reference.junit-platform-console-standalone-1.10.0.jar=..\\..\\..\\Downloads\\junit-platform-console-standalone-1.10.0.jar
 file.reference.mysql-connector-j-9.3.0.jar=..\\..\\..\\Downloads\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.junit-platform-console-standalone-1.10.0.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=\ --enable-preview
 javac.deprecation=false
@@ -50,7 +52,8 @@ javac.source=24
 javac.target=24
 javac.test.classpath=\
     ${javac.classpath}:\
-    ${build.classes.dir}
+    ${build.classes.dir}:\
+    ${libs.junit_5.classpath}
 javac.test.modulepath=\
     ${javac.modulepath}
 javac.test.processorpath=\
