--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -39,6 +39,7 @@ endorsed.classpath=
 excludes=
 file.reference.mysql-connector-j-9.3.0.jar=C:\\Users\\Aayusha\\Downloads\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
 file.reference.mysql-connector-j-9.3.0.jar-1=D:\\Programs\\1\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0\\mysql-connector-j-9.3.0.jar
+file.reference.mysql-connector-j-9.3.0.jar-2=/Users/thismac/Downloads/mysql-connector-j-9.3.0/mysql-connector-j-9.3.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -86,10 +87,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
@@ -194,10 +191,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
@@ -253,17 +246,18 @@ jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.3.0.jar}
+    ${file.reference.mysql-connector-j-9.3.0.jar}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar-2}
 # Space-separated list of extra javac options
-javac.compilerargs=\ --enable-preview
+javac.compilerargs=
 javac.deprecation=false
 javac.external.vm=true
 javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=24
-javac.target=24
+javac.source=16
+javac.target=16
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -314,10 +308,6 @@ platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=\ --enable-preview
 run.modulepath=\
     ${javac.modulepath}
 run.test.classpath=\
