--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -461,7 +461,9 @@ jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.3.0.jar}:\
-    ${file.reference.mysql-connector-j-9.3.0.jar-2}
+    ${file.reference.mysql-connector-j-9.3.0.jar-2}:\
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.mysql-connector-j-9.3.0.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
